portfolio grid layout bug patch

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -203,6 +203,7 @@ section.success {
 #portfolio .portfolio-item {
     right: 0;
     margin: 0 0 15px;
+    max-height: 200px;
 }
 
 #portfolio .portfolio-item .portfolio-link {
